--- a/blocks/ai_gen_block_4723888.liquid
+++ b/blocks/ai_gen_block_4723888.liquid
@@ -649,7 +649,7 @@
       "type": "checkbox",
       "id": "show_rating",
       "label": "Show rating",
-      "default": true
+      "default": false
     },
     {
       "type": "header",
